# sprofiler

./: Cargo.toml  Dockerfile  README.md
.circleci/: config.yml
sprofiler/: Cargo.toml
sprofiler-sys/: Cargo.toml
sprofiler-sys/src/: lib.rs
sprofiler-sys/src/lang/: c.rs  golang.rs  mod.rs
sprofiler-test/: Cargo.toml
sprofiler-test/src/: main.rs  podman.rs  testing.rs
sprofiler/src/: lib.rs  oci.rs  profile_util.rs
sprofiler/src/command/: tracer.rs
sprofiler/src/dynamic/: annotation.rs  process.rs
sprofiler/src/static/: mod.rs
