[package]
name = "sprofiler-test"
version = "0.1.0"
authors = ["Takashi IIGUNI <iiguni.tks@gmail.com>"]
edition = "2021"

license-file = "../LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.54"
async-std = { version = "1.10.0", features = ["attributes", "unstable"] }
clap = { version = "3.1.0", features = ["derive"] }
derive_builder = "0.10.2"
getset = "0.1.2"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
serde_yaml = "0.8.23"
tempdir = "0.3.7"
tracing = "0.1.31"
tracing-subscriber = "0.3.9"
oci_runtime_spec = { path = "../oci-runtime-spec" }
oci-spec = "0.5.4"
