[package]
name = "sprofiler"
version = "0.1.0"
authors = ["Takashi IIGUNI <iiguni.tks@gmail.com>"]
edition = "2021"

license-file = "../LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.64"
sprofiler-sys = { path = "../sprofiler-sys" }
structopt = "0.3.21"
lazy_static = "1.4.0"
libbpf-rs = "0.11"
plain = "0.2.3"
nix = "0.23.1"
signal-hook = { version = "0.3.6", features = ["extended-siginfo", "iterator"]  }
oci-spec = "0.5.4"

[package.metadata.deb]

depends = "libelf1"
assets = [
    ["target/release/sprofiler", "usr/bin/", "755"],
    ["conf/sprofiler-prestart.json", "usr/share/containers/oci/hooks.d/", "644"],
    ["conf/sprofiler-poststop.json", "usr/share/containers/oci/hooks.d/", "644"]
]
